--- a/CSS/style.css
+++ b/CSS/style.css
@@ -169,6 +169,38 @@ a {
   font-size: 15px;
 }
 
+/* TABLE */
+
+.table th {
+  color: #5b5858;
+}
+
+.start-date {
+  white-space: nowrap;
+}
+
+.avatar img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.table-icon {
+  color: #5b5858;
+  border: 1px solid #5b5858;
+  border-radius: 3px;
+  padding: 3px 6px;
+}
+
+.badge.success {
+  background-color: #198754;
+}
+.badge.wait {
+  background-color: #ffc107;
+}
+.badge.failed {
+  background-color: #dc3545;
+}
+
 @media (min-width: 576px) {
 }
 
